Adicionado plugins e esquemas de cores do vim

--- a/install
+++ b/install
@@ -1,5 +1,6 @@
 #!/bin/sh
 
 ln -sv $PWD/vim/.vimrc $HOME/.vimrc
+ln -sv $PWD/vim/bundle $HOME/.vim/bundle
 ln -sv $PWD/zsh/.zshrc $HOME/.zshrc
 ln -sv $PWD/zsh/.alias $HOME/.alias
